--- a/DJANGO/accounts/templates/accounts/login.html
+++ b/DJANGO/accounts/templates/accounts/login.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     {% if request.user.is_authenticated %}
-        {request.user}
+    {{request.user}}
     {% endif %}
     <div class='signupbox'>
         <form action="" id ="fmField" method="POST" enctype="multipart/form-data" onsubmit="return checkForm();">
@@ -25,6 +25,7 @@
             <div class="text-center">
               <button class='login-btn' type="submit">로그인</button>
               <a href="{% url 'accounts:signup' %}" class="signup">회원가입</a>
+              <a href="{% url 'accounts:logout' %}"><li class="my-nav-item">로그아웃</li></a>
             </div>
           </div>
       
