--- a/DJANGO/chat/templates/chat/room.html
+++ b/DJANGO/chat/templates/chat/room.html
@@ -24,6 +24,92 @@
             box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.1);
             background-color: var(--bg);
         }
+        #study-chat-area {
+            margin: 5rem 0;
+            position: relative;
+        }
+        .chat-header-area {
+            display: flex;
+            justify-content: space-between;
+            width: 100%;
+        }
+        .study-name-area {
+            display: flex;
+            align-items: center;
+        }
+        .study-name-area .chat-pfimg {
+            border-radius: 50px;
+            border: 5px solid var(--gr);
+            box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.1);
+        }
+        .study-name-area h4 {
+            margin-left: 10px;
+        }
+        .chat-body-area {
+            margin: 2rem auto;
+            width: 100%;
+            height: 50vh;
+            border-radius: 20px;
+            padding: 1rem;
+            box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.1);
+            background-color: var(--bg);
+            overflow: scroll;
+        }
+        .chat-message {
+            display:flex;
+            flex-direction: row-reverse;
+            align-items: center;
+            margin-bottom: 0.8rem;
+        }
+        .chat-message.others {
+            flex-direction: row;
+            align-items: center;
+            margin-bottom: 0.8rem;
+        }
+        .user-field {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+        
+        .chat-message .userpf {
+            border-radius: 50%;
+            border: 3px solid var(--gr);
+            box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.1);
+        }
+        
+        .chat-message h6 {
+            font-weight: 500;
+            font-size: 13px;
+            letter-spacing: -1px;
+        }
+        .chat-message .message-area {
+            background-color: var(--main);
+            padding: 0.5rem 1rem;
+            margin: 10px;
+            border-radius: 0.8rem;
+            font-size: 13px;
+            box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.1);
+        }
+        .chat-send-area {
+            display: flex;
+        }
+        .chat-send-area input[id="chat-message-input"] {
+            border-radius: 10px 0 0 10px;
+            box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.1);
+            padding: 0.6rem;
+            width: 80vw;
+        }
+        
+        .chat-send-area input[id="chat-message-submit"] {
+            border-radius: 0 10px 10px 0;
+            box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.1);
+            background-color: var(--main);
+            padding: 0.7rem;
+            width: 5rem;
+            font-weight: 700;
+            letter-spacing: -1px;
+        }
     </style>
 </head>
 <body>
@@ -35,10 +121,11 @@
     <input id="chat-message-input" type="text" size="100"><br>
     <input id="chat-message-submit" type="button" value="Send">
     {{ room_name|json_script:"room-name" }}
-    {{ username|json_script:"username" }}
+    {{ context|json_script:"context" }}
     <input id="request_user_pk" type="hidden" value="{{ request.user.pk }}">
     <script>
         const roomName = JSON.parse(document.getElementById('room-name').textContent);
+        const context = JSON.parse(document.getElementById('context').textContent);
         const chatSocket = new WebSocket(
             'ws://'
             + window.location.host
@@ -46,66 +133,61 @@
             + roomName
             + '/'
         );
-
+    
         chatSocket.onmessage = function(e) {
-            
             const data = JSON.parse(e.data);
-            
-            chatLog = document.querySelector('.chat-message-list')
-            const request_user_pk = document.querySelector('#request_user_pk').value;
-            
+            let chatLog = document.querySelector('.chat-message-list');
+    
+            // Line Feed check
+            let message = (data.message.includes('\n')) ? data.message.replace("\n", "") : data.message;
+
+            console.log(data)
+            console.log(context)
+            // ready for user data
+            const userImage = context.memberimg
+            const nickname = context.nickname
+            message = data.message.split(" : ")[1];
+    
+            // add message
+            let tag = `
+                <li class="chat-message others">
+                  <div class="user-field">
+                    <img src="${userImage}" width="40" height="40" class="userpf" alt="">
+                    <h6>${nickname}</h6>
+                  </div>
+                  <div class="message-area">${message}</div>
+                </li>
+            `;
+            tag = (nickname == "{{ nickname }}") ? tag.replace("chat-message others", "chat-message") : tag;
+            chatLog.insertAdjacentHTML("beforeend", tag);
+    
+            // scrolling
             let chatBodyArea = document.querySelector('.chat-body-area');
-            chatBodyArea.classList.add('chat-body-area')
             chatBodyArea.scrollTop = chatBodyArea.scrollHeight;
-
-            const a = document.createElement('div');
-
-            if (request_user_pk == data.context.userid) {
-                if (data.message === "님이 입장하셨습니다" || data.message === "님이 퇴장하셨습니다") {
-                    chatLog.append(data.context.username + data.message);
-                }
-                else{
-                    const chat = document.querySelector('#chat-log');
-                    const p = data.context.username + ":" + data.message + '\n';
-                    a.append(p);
-                    a.classList.add('me');
-                    chatLog.append(a);
-                }
-            }
-            else {
-                if (data.message === "님이 입장하셨습니다" || data.message === "님이 퇴장하셨습니다") {
-                    chatLog.append(data.context.username + data.message);
-                }
-                else{
-                    const chat = document.querySelector('#chat-log');
-                    const p = data.context.username + ":" + data.message + '\n';
-                    a.append(p);
-                    a.classList.add('you');
-                    chatLog.append(a);
-                }
-            }
         };
-
+    
         chatSocket.onclose = function(e) {
             console.error('Chat socket closed unexpectedly');
         };
-
+    
         document.querySelector('#chat-message-input').focus();
         document.querySelector('#chat-message-input').onkeyup = function(e) {
             if (e.keyCode === 13) {  // enter, return
                 document.querySelector('#chat-message-submit').click();
             }
         };
-
+    
         document.querySelector('#chat-message-submit').onclick = function(e) {
             const messageInputDom = document.querySelector('#chat-message-input');
-            const message = messageInputDom.value;
-            chatSocket.send(JSON.stringify({
-                'message': message
-                
-            }));
+            if(messageInputDom.value !== ""){
+              const message = "{{ nickname }}" + " : " +  messageInputDom.value + " : " + "{{ memberimg }}";
+              chatSocket.send(JSON.stringify({
+                  'message': message
+              }));
+            }
             messageInputDom.value = '';
         };
     </script>
+    
 </body>
 </html>
